--- a/addons/style.css
+++ b/addons/style.css
@@ -1,7 +1,7 @@
 /* Main Style */
 
 a {
-	color: #000000;
+	color: #E429F2;
 	text-decoration: none;
 	-o-transition-duration: 0.2s;
 	-ms-transition-duration: 0.2s;
@@ -11,7 +11,7 @@ a {
 }
 
 a:hover {
-	color: #9b9b9b;
+	color:  #12E772;
 }
 
 #sketch-holder {
@@ -19,7 +19,7 @@ a:hover {
 }
 
 .title {
-	color: #333333;
+	color: black;
 	text-align: center;
 	margin: 20px auto 15px;
 	width: 100%;
@@ -51,7 +51,7 @@ a:hover {
 }
 
 .button-style {
-	background-color: #79b6be;
+	background-color: #266EF6;
 	border: none;
 	color: #333333;
 	font-family: 'IBM Plex Sans', sans-serif;
@@ -65,11 +65,29 @@ a:hover {
 	-webkit-transition-duration: 0.2s;
     transition-duration: 0.2s;
 }
-
-.button-style:hover {
-	background-color: #92c1c7;
+.button2-style {
+	background-color: #266EF6;
+	border: none;
+	color: #333333;
+	font-family: 'IBM Plex Sans', sans-serif;
+	font-size: 14px;
+  width: 10%;
+  padding: 2px 2px;
+  margin: 5px 5px 5px;
+	-o-transition-duration: 0.2s;
+	-ms-transition-duration: 0.2s;
+	-moz-transition-duration: 0.2s;
+	-webkit-transition-duration: 0.2s;
+    transition-duration: 0.2s;
 }
 
+.button-style:hover {
+	background-color: #FF8B00;
+}
+
+.button2-style:hover {
+	background-color: #FF8B00;
+}
 /* Main Text Containers */
 
 #partone {
