changed phase links

--- a/addons/style.css
+++ b/addons/style.css
@@ -133,7 +133,15 @@ h3 {
 	font-size: 14px;
 }
 
-.phase {
+.phase_left {
+	font-family: 'IBM Plex Sans', sans-serif;
+	font-size: 14px;
+	position: fixed;
+	bottom: 2%;
+	left: 2%;
+}
+
+.phase_right {
 	font-family: 'IBM Plex Sans', sans-serif;
 	font-size: 14px;
 	position: fixed;
